# YOLO-11-12

./: Car_Parts_Segmentation.ipynb  Human_Activity_Pose_Estimation_YOLO11.ipynb  Licence_Plate_Detection.ipynb  Non_Max_Suppression_final_final.ipynb  Notes.txt  Plants_Classification_YOLO11.ipynb  README.md  Train_YOLO11_African_Wildlife_Dataset.ipynb  Train_YOLO11_Segmentation_Pothole_Dataset.ipynb  Train_YOLO11_on_VisDrone_Dataset.ipynb  YOLO11CustomObjectDetection.ipynb  YOLO11_Google_Colab.ipynb  gdown.ipynb  how_to_train_ultralytics_yolo_on_KITTI_dataset.ipynb  jupyter_lab_startup_venv.bat  license-plate-reader.py  load-yolo-models.ipynb  load-yolo-models.py  main-1.ipynb  main-1.py  multi_threaded_tracking.py  objectTracking.py  object_tracking_trails.py  pyproject.toml
17-Streamlit-App/: streamlit-app.py
18-Soccer-Analysis-System/: main.py  requirements.txt  yolo_inference.py
18-Soccer-Analysis-System/notebook/: Football_Analysis_System.ipynb
18-Soccer-Analysis-System/trackers/: tracker.py
18-Soccer-Analysis-System/utils/: bbox_utils.py  video_utils.py
19-License-Plate-Recognition-PaddleOCR/: Licence_Plate_Detection.ipynb  main.py  requirements.txt
19-License-Plate-Recognition-PaddleOCR/detections/: __init__.py  car_detection.py  licence_plate_detection.py
19-License-Plate-Recognition-PaddleOCR/utils/: video_utils.py
20-YOLO-V12/: How_to_use_YOLOv12_for_Images_and_Videos.ipynb  Train_YOLOv12_Object_Detection_Model.ipynb  YOLOv12-Intro.excalidraw  data-after.yaml
