[project]
name = "yolo-11-12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # "dill",  # used by ultralytics yolo
    "easyocr",
    "gdown",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "paddleocr>=3.3.2",
    "streamlit",
    "supervision>=0.27.0", # roboflow
    "ultralytics",
]
